2009-01-26  Pedro Fragoso  <ember@ubuntu.com>

	* libjuicer/sj-extractor.c:
	* libjuicer/sj-extractor.h:
	* libjuicer/sj-metadata-cdtext.c:
	* libjuicer/sj-util.h:
	* src/gconf-bridge.c:
	* src/gconf-bridge.h:
	* src/gedit-message-area.h:
	* src/sj-about.c:
	* src/sj-about.h:
	* src/sj-extracting.c:
	* src/sj-extracting.h:
	* src/sj-main.h:
	* src/sj-play.c:
	* src/sj-play.h:
	* src/sound-juicer.h:
	GNOME Goal: Clean up GLib and GTK+ includes (Closes #563798)

2009-02-07  Ross Burton  <ross@linux.intel.com>

	* data/sound-juicer.schemas.in:
	* src/sj-prefs.c:
	Change the default file name pattern to use %dn, which includes
	the disc number (#526649)

2009-02-07  Ross Burton  <ross@linux.intel.com>

	* src/sj-extracting.c:
	* data/sound-juicer.schemas.in:
	Update the file pattern documentation.

2009-02-03  Ross Burton  <ross@linux.intel.com>

	* configure.in:
	* NEWS:
	Version 2.25.2.

2009-01-28  Christian Persch  <chpe@gnome.org>

	* src/sj-main.c: (main): Remove redundant gtk_init() call. Bug
	#569020.

2009-01-28  Ross Burton  <ross@linux.intel.com>

	* src/sj-prefs.c:
	Fix compile failure (Frederic Peters)

2009-01-28  Luis Medinas  <lmedinas@gnome.org>

	* configure.in:
	* data/sound-juicer.glade:
	* libjuicer/sj-metadata.c (sj_metadata_helper_check_media):
	* src/sj-extracting.c (cleanup), (finished_actions),
	(on_extract_activate):
	* src/sj-main.c (on_eject_activate), (is_audio_cd),
	(media_added_cb), (media_removed_cb), (set_drive_from_device),
	(set_device), (cd_drive_exists), (prefs_get_default_device),
	(is_cd_duplication_available), (on_duplicate_activate), (main):
	* src/sj-play.c (setup):
	* src/sj-prefs.c (device_changed_cb), (prefs_drive_changed),
	(on_edit_preferences_cb):
	* src/sound-juicer.h:

	Use libbrasero-media instead of nautilus-cd-burner for burning,
	Brasero will replace n-c-b for GNOME 2.26.
	Patch from Philippe Rouquier <bonfire-app@wanadoo.fr>
	Closes bgo #567286.

2009-01-23  Ross Burton  <ross@linux.intel.com>

	* configure.in: