@@ -1,3 +1,9 @@
+2009-02-07  Ross Burton  <ross@linux.intel.com>
+
+	* src/sj-main.c:
+	* libjuicer/sj-extractor.c:
+	Don't use // comments (#569140)
+
 2009-01-26  Pedro Fragoso  <ember@ubuntu.com>
 
 	* libjuicer/sj-extractor.c:
